--- a/Basic Exercise 1/index.html
+++ b/Basic Exercise 1/index.html
@@ -4,13 +4,17 @@
 	<title>Basic 1</title>
 </head>
 <body>
-
-
+ <h1 id ="hello"></h1>
+ 	<button type="Button" onclick="hallo()">click</button>
 <script>
-	function consol(){
-	document.write( "Hello from the Console");
-	console.log{"Hello from the Console"}
+
+	function hallo() {
+
+ 		document.write("Hello from the Console");
+ 		console.log("Hello from the Console");
 	}
+
+	
 </script>
 </body>
 </html>
