--- a/Basic Exercise 3/index.html
+++ b/Basic Exercise 3/index.html
@@ -9,10 +9,9 @@
 
 <script>
 	function alerty(){
-		var text= "and I am"; 
-		var text2= "years old";
 		var num = 25;
-		alert("You go to google" + text + " " + num + " " + text2);
+		var text= "and I am "  + num + " years old"; 
+		alert("You go to google" + text);
 	}
 </script>
 </html>
