Age Calculator - Improved :D

--- a/Basic 3  Age Calculator-improved/index.html
+++ b/Basic 3  Age Calculator-improved/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic 1 -Crystal Gazer</title>
+	<title>Basic 3  Age Calculator-improved</title>
 	<script type="text/javascript" src="main.js"></script>
 </head>
 <body>
