--- a/Basic 1 Exercise 2/index.html
+++ b/Basic 1 Exercise 2/index.html
@@ -2,23 +2,27 @@
 <html>
 <head>
 	<title>Basic 2 - Part 2</title>
+	<script src="main.js"></script>
 </head>
 <body>
-	
- 	<button type="Button" onclick="ageCalculator()">click</button>
+	<input id="own" type="number" name="TEXT" value="">
+ 	<button type="Button" onclick="getAge()">click</button>
 
-<script>
+
+<!--<script>
 	function ageCalculator(){
-		var age= 1990;
+		var age= document.getElementById("own").innerHTML;
 		var age1= new Date().getFullYear();
 		var calc= age1 - age;
 		var calc1= age1 - age - 1;
-		document.write("You are either " + calc +" or" + calc1);
-
+		Math.floor(age1, age / (1000*60*60*24*365.25));
+		document.write("You are either " + calc1 +" or " + calc);
+		alert("You are either " + calc1 +" or " + calc);
+		console.log(age);
 
 
 		
-	}
+	}-->
 </script>
 </body>
 </html>
