--- a/Basic Exercise 1/index.html
+++ b/Basic Exercise 1/index.html
@@ -10,7 +10,7 @@
 
 	function hallo() {
 
- 		document.write("Hello from the Console");
+ 		document.("This is a warning message!");
  		console.log("Hello from the Console");
 	}
 
