--- a/Advanced Exercise 2/index.html
+++ b/Advanced Exercise 2/index.html
@@ -20,7 +20,7 @@
         for (j = 0; j < num[i].length; j++) {
 
             if (num[i][j] == 11 || num[i][j] == 0 || num[i][j] == 25 || num[i][j] == 17 || num[i][j] == 27) {
-                document.write(num[i][j] + "/n");
+                document.write(num[i][j] + "<br>");
             }
         }
     }
